--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "clean-css": "^4.2.1",
+    "css-loader": "^2.1.1",
     "highcharts": "^7.1.1",
     "highcharts-react-official": "^2.1.3",
     "marked": "^0.6.2",
     "node-yaml": "^3.2.0",
+    "rc-slider": "^8.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0"
   }
 }
